# numix-folders

./: README.md  README.md~  make_icns.py  meson.build  meson_post_install.py  numix-folder.desktop  numix-folders  numix-folders.desktop  numix-folders.in  numix_folders_macos.py  readme.md  script.sh  styles.md
NumixFolders/: application.py  utils.py
NumixFolders/modules/: log.py  settings.py
NumixFolders/widgets/: color_selector.py  combobox.py  headerbar.py  preview.py  window.py
colours/default/: README.md
data/: colors.json  meson.build  org.Numix.Folders.appdata.xml.in  org.Numix.Folders.desktop.in  org.Numix.Folders.gresource.xml  org.Numix.Folders.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  files  install  postinst  postrm  preinst
files/0/: empty
gui/: error  gui  guierror  notification
numix-folders/: script.sh
po/: NumixFolders.pot  POTFILES
skel/: index.theme
styles/1/Numix/48/actions/: .directory
styles/1/Numix/48/places/: .directory
styles/2/Numix/48/actions/: .directory
styles/2/Numix/48/places/: .directory
styles/3/Numix/48/actions/: .directory
styles/3/Numix/48/places/: .directory
styles/4/Numix/48/actions/: .directory
styles/4/Numix/48/places/: .directory
styles/5/Numix/48/actions/: .directory
styles/5/Numix/48/places/: .directory
styles/6/Numix/48/places/: .directory
styles/6/Numix/64/places/: .directory
